<resources>
    <string name="app_name">DanceMaster</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings for the side bar options -->
    <string name="home_label">Home</string>
    <string name="dances_label">Dances</string>
    <string name="friends_label">Friends</string>
    <string name="settings_label">Settings</string>
    <string name="about_label">About</string>

    <!-- Strings for the friends page -->
    <string name="ui_friends_page_title">Weekly Leaderboard</string>
    <string name="ui_friends_points_label">Points</string>
    <string name="ui_friends_videos_title">See friends\' videos!</string>
    <string name="ui_add_friends_button">Add Friends!</string>
    <string name="points">Points!</string>
    <string name="no_friends">Oops! You do not have any friends!</string>

    <!-- Strings for the add friends page -->
    <string name="ui_add_friend_text">Follow your friends!</string>
    <string name="ui_enter_user_hint">Enter username to follow</string>
    <string name="ui_follow_button">Follow!</string>
    <string name="ui_toast_no_such_user">Oops! Nobody has registered with username</string>
    <string name="ui_toast_successfully_following">You are now following</string>
    <string name="already_added">You are already following</string>
    <string name="narcissist">Silly! You can\'t follow yourself!</string>

    <!-- Strings for the preferences page -->
    <string name="settings">Settings</string>
    <string name="ui_profile_title">Profile</string>
    <string name="ui_profile_summary">Customize your profile!</string>
    <string name="profile_key">profile_key</string>

    <string name="ui_reminder_title">Schedule reminders!</string>
    <string name="ui_reminder_option_label">Reminders</string>
    <string name="ui_reminder_option_summary">Turn on reminders!</string>
    <string name="reminder_option_key">reminder_option_key</string>

    <string name="ui_reminder_time_label">Time</string>
    <string name="ui_reminder_time_summary">Choose when to dance!</string>
    <string name="reminder_time_key">reminder_time_key</string>

    <!-- Strings for the about page -->
    <string name="ui_about_title">About the app</string>

    <!-- Strings for the dance activity page -->
    <string name="how_to_video">Instructional Video!</string>
    <string name="dance_video">Dance Video!</string>

    <!-- Strings for the profile page -->
    <string name="change_btn">Change Photo!</string>
    <string name="name">Name</string>
    <string name="name_edit">Name</string>
    <string name="username">Username</string>
    <string name="username_edit">Username</string>
    <string name="email">Email</string>
    <string name="email_edit">Email address</string>
    <string name="gender">Gender</string>
    <string name="female_btn">Female</string>
    <string name="male_btn">Male</string>
    <string name="save">Save!</string>
    <string name="cancel">Cancel!</string>
    <string name="prof_photo">Profile Photo</string>
    <string name="pick_prof_photo">Select profile photo!</string>
    <string name="prof_photo_filename">smile.jpg</string>
    <string name="profile_toast_save">Profile saved!</string>

    <!-- Strings for the home (progress) page -->
    <string name="profile_picture_label">It\'s you!</string>
    <string name="ui_progress_title">Look at your progress!</string>
    <string name="no_progress_message">You haven\'t watched any videos in the past 7 days. Get dancing!</string>

    <!-- Strings related to communicating with the server -->
    <string name="ui_toast_connection_successful">Connected to the cloud</string>
    <string name="ui_toast_connection_unsuccessful">Unable to connect to the cloud</string>
    <string name="ui_toast_user_taken"> is taken. Please choose a new username</string>
    <string name="ui_toast_user_saved">Username saved</string>

    <!-- Create a username -->
    <string name="create_username_instructions">Create a username!</string>
    <string name="username_hint">Your username here!</string>

</resources>